# waysome

./: README.md
doc/user/: waysome.tex
src/: CMakeLists.txt
src/action/: manager.c
src/compositor/: module.c  monitor.c  monitor.h
src/connection/: processor.c
src/input/: hotkey_dag.c  hotkey_event.c  hotkey_event.h  hotkeys.c  hotkeys.h  hotkeys.md  input_device.c
src/objects/: set.c  set.h
src/util/: error.c  error.h
tests/check/: CMakeLists.txt  tests.h
tests/check/action/: CMakeLists.txt
tests/check/command/: CMakeLists.txt
tests/check/compositor/: CMakeLists.txt
tests/check/connection/: CMakeLists.txt
tests/check/input/: input_tests.c
tests/check/logger/: CMakeLists.txt
tests/check/objects/: CMakeLists.txt
tests/check/serialize/: CMakeLists.txt
tests/check/serialize/json_transaction/: test.c
tests/check/session/: CMakeLists.txt
tests/check/storage/: CMakeLists.txt
tests/check/util/: CMakeLists.txt
tests/check/values/: CMakeLists.txt
